src/test/deca/context/invalid/Class_wrong7.deca
// E n'existe pas

// Date: 20.01.2022

class A{

    int entier;

    void action (){
        this.entier = this.e + 1;
    }
}


{
A a = new A();
a.action();
println("ben non");
}